--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,9 @@
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^2.1.6",
+    "@feathersjs/authentication-jwt": "^2.0.1",
+    "@feathersjs/authentication-local": "^1.2.1",
     "@feathersjs/configuration": "^1.0.2",
     "@feathersjs/errors": "^3.3.0",
     "@feathersjs/express": "^1.2.3",
@@ -35,7 +38,9 @@
     "@feathersjs/socketio": "^3.2.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "feathers-nedb": "^3.0.1",
     "helmet": "^3.12.1",
+    "nedb": "^1.8.0",
     "serve-favicon": "^2.5.0",
     "winston": "^2.4.2"
   },
